fix lazy loading in dark mode in home page

--- a/src/components/Loader/loader.css
+++ b/src/components/Loader/loader.css
@@ -2,6 +2,7 @@
     color: #000000;
     font-size: 20px;
     margin: 100px auto;
+    margin-top: 20rem;
     width: 1em;
     height: 1em;
     border-radius: 50%;
